--- a/templates/project_docs_list.html
+++ b/templates/project_docs_list.html
@@ -217,7 +217,7 @@
                             <span class="file-badge file-folder">文件夹</span>
                           {% elif file.name.endswith('.jpg') or file.name.endswith('.jpeg') or file.name.endswith('.png') or file.name.endswith('.gif') or file.name.endswith('.bmp') or file.name.endswith('.svg') %}
                             <span class="file-badge file-image">图片</span>
-                          {% elif file.name.endswith('.pdf') or file.name.endswith('.doc') or file.name.endswith('.docx') %}
+                          {% elif file.name.endswith('.pdf') or file.name.endswith('.doc') or file.name.endswith('.docx') or file.name.endswith('.txt') %}
                             <span class="file-badge file-doc">文档</span>
                           {% elif file.name.endswith('.zip') or file.name.endswith('.rar') or file.name.endswith('.7z') or file.name.endswith('.tar') or file.name.endswith('.gz') %}
                             <span class="file-badge file-archive">压缩包</span>
