--- a/templates/profile/green_wall.html
+++ b/templates/profile/green_wall.html
@@ -2,20 +2,31 @@
 <div class="card mb-4">
   <div class="card-header d-flex justify-content-between align-items-center">
     <h5 class="mb-0"><i class="fas fa-folder"></i> 贡献墙</h5>
-    <button id="showBtn" onclick="handleRender()">渲染贡献墙</button>
+    <button class="btn btn-primary btn-sm" id="showBtn" onclick="handleRender()"><i class="fas fa-plus"></i> 渲染贡献墙</button>
   </div>
   <div class="card-body">
-    <div class="form">
-      <div class="input-group">
-        <label>Github 用户名:<input id="userInput" placeholder="Github 用户名" /></label>
+    <div class="row">
+      <div class="col-md-6 mb-3">
+        <label for="userInput" class="form-label fw-bold">GitHub 用户名</label>
+        <div class="input-group">
+          <span class="input-group-text bg-dark"><i class="fab fa-github"></i></span>
+          <input type="text" class="form-control" id="userInput" name="github_username" placeholder="GitHub 用户名" />
+        </div>
       </div>
 
-      <div class="input-group">
-        <label>个人访问令牌 :<input id="tokenInput" type="password" placeholder="ghp_xxx" style="width: 200px" /></label>
+      <div class="col-md-6 mb-3">
+        <label for="tokenInput" class="form-label fw-bold">个人访问令牌</label>
+        <div class="input-group">
+          <span class="input-group-text bg-dark"><i class="fas fa-key"></i></span>
+          <input type="password" class="form-control" id="tokenInput" name="github_token" placeholder="个人访问令牌 (ghp_xxx)" />
+        </div>
       </div>
     </div>
-
-    <div id="wall" class="grid" style="position: relative"></div>
+    <div class="row">
+      <div class="col-md-12" style="overflow: auto;">
+        <div id="wall" class="grid" style="position: relative"></div>
+      </div>
+    </div>
 
     <div class="legend">
       <span>Less</span>
