--- a/templates/profile.html
+++ b/templates/profile.html
@@ -114,6 +114,16 @@
             </div>
 
             <!-- TODO: 前往设置的按钮 -->
+            {% if current_user == user %}
+              <div class="d-flex align-items-center mb-3 p-2 rounded bg-dark">
+                <i class="fas fa-envelope contact-icon"></i>
+                <span id="previewEmail" class="ms-3">111</span>
+              </div>
+              <div class="d-flex align-items-center mb-3 p-2 rounded bg-dark">
+                <i class="fab fa-github contact-icon"></i>
+                <span id="previewGithub" class="ms-3">222</span>
+              </div>
+            {% endif %}
           </div>
         </div>
       </div>
@@ -185,5 +195,4 @@
 
   <!-- 引入自定义JS -->
   <script src="{{ url_for('static', filename='js/cropper.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/profile.js') }}"></script>
 {% endblock %}
